# PocketAI-XIAO_ESP32

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  atomic.c  atomic.h  camera.c  camera.h  idf_component.yml  lv_port_disp.c  lv_port_disp.h  main.c
main/gui/: main_ui.c  main_ui.h
